# TelemetryForge

./: .gitignore  CODE_CHANGES.md  Cargo.toml  LICENSE  README.en.md  README.it.md  README.md  build.rs  tauri.conf.json
.github/workflows/: windows-release.yml
capabilities/: default.json
frontend/: app-v2.js  i18n.js  index.html  remote-bridge.js  styles.css
samples/: msi-forged-core.telemetryforge
samples/msi-forged-core/: README.md  config.yaml
samples/superwidgets/: README.md
samples/superwidgets/components/: reactor-core.superwidget
samples/superwidgets/screens/: Command Dials.yaml  Reactor Core.yaml  SDK Hello Dial.yaml  TelemetryForge Boot.yaml
scripts/: read-lhm.ps1
sdk/: README.md  pack-superwidget.ps1
sdk/examples/hello-dial/: Cargo.toml  manifest.yaml  sdk-hello-dial.superwidget  widget.wasm  widget.wat
sdk/examples/reactor-core/: Cargo.toml  manifest.yaml  widget.wasm  widget.wat
sdk/telemetryforge-superwidget-cli/: Cargo.toml
sdk/telemetryforge-superwidget-cli/src/: main.rs
sdk/telemetryforge-superwidget-sdk/: Cargo.toml
sdk/telemetryforge-superwidget-sdk/src/: lib.rs
src/: app_state.rs  lib.rs  main.rs  package.rs  remote_auth.rs  remote_server.rs  scene.rs  windows_startup.rs
src/config/: mod.rs  persistence.rs  schema.rs
src/display_driver/: detection.rs  mod.rs  protocol.rs  transport.rs
src/renderer/: advanced_widgets.rs  background.rs  canvas.rs  fonts.rs  mod.rs
src/sensors/: libre_hardware_monitor.rs  mod.rs  model.rs  poller.rs  weather.rs  windows_volume.rs
src/superwidgets/: mod.rs  renderer.rs  wasm_runtime.rs
src/ui/: mod.rs
superwidgets/: README.md
superwidgets/cpu-command-dial/: manifest.yaml
superwidgets/gpu-command-dial/: manifest.yaml
(+2 files in other folders)
